fix a bug with note textarea display on mobile

--- a/src/components/note.scss
+++ b/src/components/note.scss
@@ -238,7 +238,7 @@
     .note {
       height: 60vh;
       min-width: 50vw;
-      max-height: 60vh;
+      max-height: 50vh;
     }
   }
   .empty-note {
